# otel-distro-builder

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  action.yml  cli_entry.py  manifest.yaml  otel-distro-builder.spec  pyproject.toml  pytest.ini  run_cloud_build.sh  run_local_build.sh
.github/: changelog-config.json
.github/workflows/: base-tests.yml  build-cli-binaries.yml  comprehensive-tests.yml  publish-pr.yml  publish.yml  release.yml  test.yml  update-bindplane-version.yml  update-otel-versions.yml
Formula/: otel-distro-builder.rb
builder/: .dockerignore  Dockerfile  __init__.py  entrypoint.sh  pylintrc  requirements-dev.txt  requirements.txt  versions.yaml
builder/scripts/: check_binary_go_version.py  list_ocb_versions.py  list_versions.py  test.sh  update_versions_yaml.py
builder/src/: __init__.py  bindplane_components.yaml  build.py  component_registry.py  components.yaml  config_parser.py  go_downloader.py  goreleaser_downloader.py  logger.py  main.py  manifest_generator.py  nfpms.py  ocb_downloader.py  platforms.py  resources.py  version.py  (+1 more)
docs/: README.md  config-to-manifest.md  docker.md  github-action.md  github-actions.md  google-cloud-build.md  local-build-script.md  local-multiarch-build-script.md
scripts/: build_from_config.sh  cloudbuild.yaml  common.sh  generate_manifest.sh  release.sh  run_cloud_build.sh  run_local_build.sh  run_local_multiarch_build.sh  setup.sh  test.sh
src/: build.py  main.py
templates/: Dockerfile  preinstall.sh  preremove.sh  template.conf  template.service
tests/: conftest.py  test_build.py
(+43 files in other folders)
